# infinitelives

./: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION.md  QUICKSTART.md  README.md  config.py  demo_complex_results.txt  demo_simple_results.txt  examples.py  main.py  requirements.txt  setup.py  test_edge_results.txt  test_full_results.txt
game-evidence-graph/: Dockerfile  Makefile  README.md  pyproject.toml
game-evidence-graph/configs/: default.yaml  evidence_weights.yaml
game-evidence-graph/configs/controlled_vocab/: aesthetics.yaml  dynamics.yaml  evidence_strengths.yaml  measurements.yaml  mechanics.yaml  (+4 more)
game-evidence-graph/docs/: architecture.md  audit_normalization_workflow.md  human_review.md  llm_prompts.md  pipeline.md  query_examples.md  recite_adaptation_report.md  schema.md  scientific_limitations.md  third_party.md
game-evidence-graph/notebooks/: dataset_quality_checks.ipynb  pilot_analysis.ipynb
game-evidence-graph/scripts/: apply_normalization.py  create_audit_samples.py  run_pipeline.py
game-evidence-graph/tests/: support.py  test_api.py  test_attribution_level.py  test_blank_effect_handling.py  test_cli.py  test_dataset_c_generation.py  test_edge_weighting.py  test_event_level_handling.py  test_game_matching.py  test_game_ontology_builder.py  test_graph_builder.py  test_id_generation.py  test_json_repair.py  test_mechanic_matching.py  test_outcome_matching.py  test_page_traceability.py  test_pdf_ingestion.py  test_query_engine.py  test_recite_adaptation_report.py  test_review_queue.py  test_schemas.py  test_study_extraction_mock.py
(+109 files in other folders)
