[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-evidence-graph"
version = "0.1.0"
description = "Literature-derived intervention evidence graph for empirical game studies."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Infinite Lives"}]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "networkx>=3.3",
  "rapidfuzz>=3.9",
  "pymupdf>=1.24",
  "pypdf>=4.2",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  "loguru>=0.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pyyaml>=6.0",
  "openai>=1.60",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27"]
storage = ["duckdb>=1.0"]
review-ui = ["streamlit>=1.36"]

[project.scripts]
game-evidence = "game_evidence_graph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
